--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "gatsby": "^2.21.0",
+    "gatsby-image": "^2.4.1",
+    "gatsby-plugin-sharp": "^2.6.1",
+    "gatsby-source-contentful": "^2.3.2",
+    "gatsby-transformer-sharp": "^2.5.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
