--- a/package.json
+++ b/package.json
@@ -14,14 +14,20 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.7",
     "bootstrap": "^4.4.1",
     "gatsby": "^2.21.0",
+    "gatsby-background-image": "^1.1.1",
     "gatsby-image": "^2.4.1",
+    "gatsby-plugin-react-helmet": "^3.3.1",
     "gatsby-plugin-sharp": "^2.6.1",
+    "gatsby-plugin-styled-components": "^3.3.1",
     "gatsby-source-contentful": "^2.3.2",
     "gatsby-transformer-sharp": "^2.5.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-helmet": "^6.0.0",
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
     "prettier": "2.0.5"
