--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
     "gatsby-image": "^2.4.1",
     "gatsby-plugin-react-helmet": "^3.3.1",
     "gatsby-plugin-sharp": "^2.6.1",
+    "gatsby-plugin-smoothscroll": "^1.1.0",
     "gatsby-plugin-styled-components": "^3.3.1",
     "gatsby-source-contentful": "^2.3.2",
     "gatsby-transformer-sharp": "^2.5.1",
+    "install": "^0.13.0",
+    "npm": "^6.14.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
     "react-icons": "^3.10.0",
+    "smooth-scroll": "^16.1.3",
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
